--- a/package.json
+++ b/package.json
@@ -3,10 +3,25 @@
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.0.0",
         "@symfony/webpack-encore": "^1.7.0",
+        "@tailwindcss/forms": "^0.4.0",
+        "@tailwindcss/typography": "^0.5.2",
+        "autoprefixer": "^10.4.2",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
+        "tailwindcss": "^3.0.15",
         "webpack-notifier": "^1.6.0"
     },
+    "dependencies": {
+        "sass": "^1.35.1",
+        "sass-loader": "^12.1.0",
+        "stimulus-use": "^0.41.0"
+    },
+    "browserslist": [
+        "> 0.5%",
+        "last 2 versions",
+        "Firefox ESR",
+        "not dead"
+    ],
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
