--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "@tailwindcss/typography": "^0.5.2",
         "autoprefixer": "^10.4.2",
         "core-js": "^3.0.0",
+        "file-loader": "^6.0.0",
+        "postcss-loader": "^6.0.0",
         "regenerator-runtime": "^0.13.2",
         "tailwindcss": "^3.0.15",
         "webpack-notifier": "^1.6.0"
