--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,11 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "endroid/qr-code": "^4.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
+        "scheb/2fa-bundle": "^6.0",
+        "scheb/2fa-totp": "^6.0",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
