--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,7 @@ security:
                 username_parameter: email
                 password_parameter: password
                 enable_csrf: true
+                default_target_path: app_dashboard
 
             two_factor:
                 auth_form_path: 2fa_login
