--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "webpack-notifier": "^1.6.0"
     },
     "dependencies": {
+        "@easylogic/colorpicker": "^1.10.11",
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0",
         "stimulus-use": "^0.41.0"
