--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -52,7 +52,7 @@ security:
         # This ensures that the form can only be accessed when two-factor authentication is in progress.
         - { path: ^/2fa, role: IS_AUTHENTICATED_2FA_IN_PROGRESS }
         # - { path: ^/admin/login, roles: PUBLIC_ACCESS }
-        - { path: ^/dashboard, roles: ROLE_ADMIN }
+        - { path: ^/dashboard, roles: [ ROLE_ADMIN,ROLE_USER ] }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
