--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=
 APP_SECRET=c8ea8179a644e19860759e4238d489a3
 ###< symfony/framework-bundle ###
 
@@ -31,6 +31,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 DATABASE_URL=
 ###< doctrine/doctrine-bundle ###
 
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=doctrine://default
