--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,11 @@
+index:
+  path: /
+  controller: App\Controller\SiteController::index
+
 controllers:
-    resource: ../src/Controller/
-    type: annotation
+  resource: ../src/Controller/
+  type: attribute
 
 kernel:
-    resource: ../src/Kernel.php
-    type: annotation
+  resource: ../src/Kernel.php
+  type: attribute
