--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     ],
     "license": "MIT",
     "private": true,
+    "name": "linkify",
     "scripts": {
         "dev-server": "encore dev-server",
         "dev": "encore dev",
