--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,15 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/public/uploads/
+/public/robots.txt
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
 .idea
+
+/public/build/*.js.LICENSE.txt
+
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
 npm-debug.log
