--- a/.env
+++ b/.env
@@ -48,3 +48,8 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 # postgresql+advisory://db_user:db_password@localhost/db_name
 LOCK_DSN=semaphore
 ###< symfony/lock ###
+
+###> snc/redis-bundle ###
+# passwords that contain special characters (@, %, :, +) must be urlencoded
+REDIS_URL=redis://localhost
+###< snc/redis-bundle ###
