--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/migrations": "^3.1",
         "doctrine/orm": "^2.11",
@@ -19,6 +20,7 @@
         "scheb/2fa-bundle": "^6.0",
         "scheb/2fa-totp": "^6.0",
         "sensio/framework-extra-bundle": "^6.1",
+        "snc/redis-bundle": "^4.3",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/doctrine-messenger": "6.1.*",
@@ -53,8 +55,7 @@
         "symfonycasts/verify-email-bundle": "^1.10",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "zenstruck/foundry": "^1.16",
-        "doctrine/doctrine-fixtures-bundle": "^3.4"
+        "zenstruck/foundry": "^1.16"
     },
     "config": {
         "allow-plugins": {
