--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -34,8 +34,8 @@ when@prod:
       # default_redis_provider: redis://localhost
 
       # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
-      app: cache.adapter.apcu
-
+      app: cache.adapter.redis
+      default_redis_provider: snc_redis.default
       # Namespaced pools use the above "app" backend by default
       #pools:
       #my.dedicated.cache: null
