added emailing closes #20

--- a/.env
+++ b/.env
@@ -16,6 +16,8 @@
 ###> symfony/framework-bundle ###
 APP_ENV=
 APP_SECRET=c8ea8179a644e19860759e4238d489a3
+APP_DEFAULT_EMAIL=
+MAILER_DSN=
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-meta ###
