added sentry package and settings

--- a/.env
+++ b/.env
@@ -55,3 +55,7 @@ LOCK_DSN=semaphore
 # passwords that contain special characters (@, %, :, +) must be urlencoded
 REDIS_URL=redis://localhost
 ###< snc/redis-bundle ###
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###< sentry/sentry-symfony ###
